# NAVI

./: .gitignore  README.md  environment.navi-jupyter.yml  example_usage.py  pyproject.toml
.cache/matplotlib/: fontlist-v390.json
navi/: __init__.py  decoder.py  diagnostics.py  encoders.py  graph.py  losses.py  model.py  train.py
notebooks/: navi-custom-h5ad.ipynb
tests/: test_critical.py  test_graph.py  test_integration.py  test_losses.py  test_model_smoke.py
